# mini_embed

./: .gitignore  README.md  pyproject.toml
configs/: start.yaml
configs/model/: cbow.yaml
mini_embed/: __init__.py
mini_embed/data/: datasets.py
mini_embed/modules/: cbow.py
mini_embed/trainers/: custom_trainer.py
tests/: test_mini_embed.py
