[tool.poetry]
name = "mini_embed"
version = "0.1.0"
description = ""
authors = ["exotol <artem.bardakov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "^1.1.2"
pandas = "^1.4.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
